--- a/pres/Makefile
+++ b/pres/Makefile
@@ -5,9 +5,9 @@ markdown_pres  = $(markdown_srcs:.md=_pres.html)
 all : $(markdown_web) $(markdown_pres)
 
 %.html : %.md
-	markdown_py -x def_list -n $< -f $@
+	markdown_py -x def_list -x codehilite -n $< -f $@
 %_pres.html : %.md
-	landslide -x def_list $< -c -r -d $@
+	landslide -l no -x def_list $< -c -r -d $@
 
 web: overview.html
 	open overview.html
